--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "@fontsource-variable/onest": "^5.0.5",
     "@ionic/react": "^8.2.7",
     "@ionic/react-router": "^8.0.0",
+    "@types/leaflet": "^1.9.12",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "ArecoBusMovile": "file:",
     "axios": "^1.7.4",
     "ionicons": "^7.4.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
   },
