--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "react-spring-bottom-sheet": "^3.4.1"
   },
   "devDependencies": {
     "@capacitor/cli": "6.1.2",
