--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fontsource-variable/onest": "^5.0.5",
     "@ionic/react": "^8.2.7",
     "@ionic/react-router": "^8.0.0",
+    "@react-spring/web": "^9.7.5",
     "@types/leaflet": "^1.9.12",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
