--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@fontsource-variable/onest": "^5.0.5",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@ionic/react": "^8.2.7",
     "@ionic/react-router": "^8.0.0",
     "@react-spring/web": "^9.7.5",
@@ -28,6 +32,7 @@
     "axios": "^1.7.4",
     "ionicons": "^7.4.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -45,6 +50,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-fontawesome": "^1.6.8",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.20",
